# accessibility-map-fr

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: data.yml  deploy.yml
crates/neighborhood3d/: Cargo.toml
crates/neighborhood3d/src/: camera.rs  components.rs  data.rs  geo.rs  lib.rs  mesh.rs  scene.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/data/: config.json  france-mask.geojson  sample.geojson
frontend/src/: a11y.ts  config.ts  main.ts  state.ts  style.css  theme.ts  types.ts
frontend/src/accessible/: accessibleView.ts
frontend/src/data/: clusterClient.ts  commons.ts  dataSource.ts  overpass.ts  points.worker.ts  wikidata.ts
frontend/src/imagery/: imagery.ts
frontend/src/map/: filters.ts  layers.ts  mapView.ts  popup.ts  style.ts
frontend/src/neighborhood/: placePanel.ts
frontend/src/three/: scene3d.ts
frontend/src/transition/: transition.ts
frontend/src/ui/: loader.ts
pipeline/: package-lock.json  package.json
pipeline/src/: build-france-mask.mjs  build-pmtiles.mjs  fetch-acceslibre.mjs  fetch-csv.mjs  make-sample.mjs  wikidata-enrich.mjs
pipeline/src/lib/: acceslibre.mjs
