[package]
name = "neighborhood3d"
version = "0.1.0"
edition = "2021"
description = "Scene 3D sobre (Bevy/WASM) du voisinage d'un lieu Acceslibre : batiments extrudes, mobilier des 30 derniers metres, marqueurs d'imagerie de rue."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_asset",
  "webgl2",
] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
earcutr = "0.4"

# Overrides indispensables pour la cible wasm32-unknown-unknown :
# la generation aleatoire (uuid/getrandom, tirees par Bevy) requiert le backend JS.
# uuid est epingle a une version contemporaine de Bevy 0.14 (getrandom 0.2),
# pour eviter que uuid >= 1.11 ne tire getrandom 0.3 (qui exige un cfg dedie).
uuid = { version = "=1.10.0", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }

# Compression maximale du .wasm (temps de chargement de la 3D).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
